# bgfx.slang

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  README.md
cmake/: bgfx-slang-config.cmake  bgfx-slang-toolUtils.cmake
examples/01-cubes/: cubes.slang
examples/05-instancing/: instancing.slang
examples/06-bump/: bump.slang
examples/24-nbody/: nbody.slang  particle.slang
examples/lib/: lighting.slang
src/: CMakeLists.txt
src/BgfxSlang/: Attributes.h  Compiler.cpp  Compiler.h  EntryPoint.h  Glsl.cpp  Glsl.h  Status.h  Target.cpp  Target.h  TextuerData.cpp  TextureData.h  Types.h
src/BgfxSlang/Utils/: Bin2cWriter.h  BufferWriter.h  ConsoleWriter.h  FileWriter.h  IWriter.h  StringUtils.h
tools/: CMakeLists.txt  main.cpp
tools/Utils/: CmdLine.h  StringFormat.cpp  StringFormat.h
vcpkg-port-example/bgfx-slang/: portfile.cmake  vcpkg.json
